// Copyright 2021 FishGoddess.  All rights reserved.
// Use of this source code is governed by a MIT style
// license that can be found in the LICENSE file.

syntax = "proto3";

package github.com.avinoplan.postar.api;

import "api.proto";

// protoc -I=. --go_out=. --go_opt=paths=source_relative --go-grpc_out=. --go-grpc_opt=paths=source_relative postar.proto
option go_package = "github.com/avinoplan/postar/api";

// Email wraps all information of using smtp service.
message Email {
  repeated string receivers = 1; // Receivers.
  string    subject = 2;   // Subject.
  string    body_type = 3;   // Body type.
  string    body = 4;   // Body.
}

// SendEmailOptions is the options of sending emails.
message SendEmailOptions {
  bool async = 1; // Sending this email asynchronously.
  int32 timeout = 2; // Sending timeout in seconds.
}

// SendEmailRequest is the request of SendEmail.
message SendEmailRequest {
  Email email = 1; // Sending email.
  SendEmailOptions options = 2; // Sending options.
}

// SendEmailResponse is the response of SendEmail.
message SendEmailResponse {
  ServerCode code = 1; // 0 is ok.
  string msg = 2; // For messaging.
  string trace_id = 3; // For tracing.
}

// PostarService is the service of postar.
service PostarService {
  // SendEmail send one email.
  rpc SendEmail(SendEmailRequest) returns (SendEmailResponse);
}